feat(vfs): wire secure pipeline into client app
Add VfsOrchestratorProvider to initialize and provide the secure
write pipeline throughout the application:

- Add v024 migration for vfs_item_keys and vfs_item_shares tables
- Implement ItemKeyStore backed by SQLite for session key storage
- Implement UserKeyProvider adapter wrapping useVfsKeys
- Implement RecipientPublicKeyResolver using share targets API
- Create VfsOrchestratorContext with hooks for secure facade access
- Wire provider into main.tsx inside AuthProvider
- Update useFileUpload to use secure facade when vfsSecureUpload enabled
- Add vfsSecureUpload feature flag (disabled by default)

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -56,6 +56,7 @@
     "@tanstack/react-virtual": "3.13.18",
     "@tearleads/ai": "workspace:*",
     "@tearleads/analytics": "workspace:*",
+    "@tearleads/api-client": "workspace:*",
     "@tearleads/audio": "workspace:*",
     "@tearleads/backups": "workspace:*",
     "@tearleads/businesses": "workspace:*",
@@ -77,6 +78,7 @@
     "@tearleads/ui": "workspace:*",
     "@tearleads/vehicles": "workspace:*",
     "@tearleads/vfs-explorer": "workspace:*",
+    "@tearleads/vfs-sync": "workspace:*",
     "@tearleads/window-manager": "workspace:*",
     "@uiw/react-md-editor": "4.0.11",
     "better-sqlite3-multiple-ciphers": "12.6.2",
