fix(build): exclude testUtils files from Docker build

--- a/packages/client/tsconfig.docker.json
+++ b/packages/client/tsconfig.docker.json
@@ -3,6 +3,8 @@
   "exclude": [
     "src/**/*.test.ts",
     "src/**/*.test.tsx",
+    "src/**/*.testUtils.ts",
+    "src/**/*.testUtils.tsx",
     "src/**/*.integration.test.ts",
     "src/**/*.integration.test.tsx",
     "src/test/**/*",
