feat(k8s): add Garage S3-compatible object storage for VFS blobs
Add Garage deployment to staging k8s for S3-compatible blob storage:
- ConfigMap with Garage configuration
- PVCs for metadata and data storage
- Deployment with health probes
- Service exposing S3, RPC, web, and admin ports
- Setup Job for initial bucket and key configuration
- API deployment env vars for S3 credentials
- ConfigMap entries for VFS blob S3 endpoint settings
- Secrets entries for Garage and S3 credentials
- Documentation for Garage usage and troubleshooting

--- a/terraform/stacks/staging/k8s/manifests/api.yaml
+++ b/terraform/stacks/staging/k8s/manifests/api.yaml
@@ -35,6 +35,16 @@ spec:
                 secretKeyRef:
                   name: tearleads-secrets
                   key: POSTGRES_PASSWORD
+            - name: VFS_BLOB_S3_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: tearleads-secrets
+                  key: VFS_BLOB_S3_ACCESS_KEY_ID
+            - name: VFS_BLOB_S3_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: tearleads-secrets
+                  key: VFS_BLOB_S3_SECRET_ACCESS_KEY
           resources:
             requests:
               memory: "128Mi"
