--- a/terraform/stacks/staging/k8s/manifests/kustomize/base/kustomization.yaml
+++ b/terraform/stacks/staging/k8s/manifests/kustomize/base/kustomization.yaml
@@ -4,8 +4,10 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - configmap.yaml
+  - secrets.yaml
   - postgres.yaml
   - redis.yaml
+  - garage.yaml
   - api.yaml
   - client.yaml
   - website.yaml
