--- a/terraform/stacks/staging/k8s/manifests/kustomize/base/secrets.yaml
+++ b/terraform/stacks/staging/k8s/manifests/kustomize/base/secrets.yaml
@@ -7,3 +7,8 @@ type: Opaque
 stringData:
   JWT_SECRET: "${JWT_SECRET}"
   POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+  # Garage / VFS Blob Storage credentials
+  GARAGE_RPC_SECRET: "${GARAGE_RPC_SECRET}"
+  GARAGE_ADMIN_TOKEN: "${GARAGE_ADMIN_TOKEN}"
+  VFS_BLOB_S3_ACCESS_KEY_ID: "${VFS_BLOB_S3_ACCESS_KEY_ID}"
+  VFS_BLOB_S3_SECRET_ACCESS_KEY: "${VFS_BLOB_S3_SECRET_ACCESS_KEY}"
