--- a/terraform/stacks/staging/k8s/manifests/kustomize/base/garage.yaml
+++ b/terraform/stacks/staging/k8s/manifests/kustomize/base/garage.yaml
@@ -208,24 +208,24 @@ spec:
               export GARAGE_ADMIN_API_BIND="garage:3903"
 
               # Get node ID and configure layout
-              NODE_ID=$(garage -c /etc/garage.toml node id 2>/dev/null | head -1 | cut -d'@' -f1)
+              NODE_ID=$(garage -c /etc/garage.toml node id | head -1 | cut -d'@' -f1)
               echo "Node ID: $NODE_ID"
 
               # Assign capacity to node (1GB zone dc1)
-              garage -c /etc/garage.toml layout assign -z dc1 -c 1G "$NODE_ID" || true
+              garage -c /etc/garage.toml layout assign -z dc1 -c 1G "$NODE_ID"
 
               # Apply layout
-              garage -c /etc/garage.toml layout apply --version 1 || true
+              garage -c /etc/garage.toml layout apply --version 1
 
               # Create access key
-              garage -c /etc/garage.toml key create vfs-blob-key || true
-              garage -c /etc/garage.toml key import -n vfs-blob-key "$VFS_BLOB_S3_ACCESS_KEY_ID" "$VFS_BLOB_S3_SECRET_ACCESS_KEY" || true
+              garage -c /etc/garage.toml key create vfs-blob-key
+              garage -c /etc/garage.toml key import -n vfs-blob-key "$VFS_BLOB_S3_ACCESS_KEY_ID" "$VFS_BLOB_S3_SECRET_ACCESS_KEY"
 
               # Create bucket
-              garage -c /etc/garage.toml bucket create vfs-blobs || true
+              garage -c /etc/garage.toml bucket create vfs-blobs
 
               # Grant permissions
-              garage -c /etc/garage.toml bucket allow --read --write --owner vfs-blobs --key vfs-blob-key || true
+              garage -c /etc/garage.toml bucket allow --read --write --owner vfs-blobs --key vfs-blob-key
 
               echo "Garage setup complete"
           volumeMounts:
