--- a/ansible/playbooks/developerWorkstation.yml
+++ b/ansible/playbooks/developerWorkstation.yml
@@ -85,6 +85,12 @@
         regexp: "^vault-prod\\s+"
         state: absent
 
+    - name: Add known_hosts entry for vault-prod
+      ansible.builtin.lineinfile:
+        path: "{{ known_hosts_file }}"
+        line: "vault-prod {{ ssh_key_type }} {{ ssh_key_data }}"
+        state: present
+
     - name: Ensure ssh config file exists
       ansible.builtin.file:
         path: "{{ ssh_config_file }}"
@@ -141,7 +147,7 @@
         block: |
           Host vault-prod
               User {{ deploy_user }}
-              StrictHostKeyChecking accept-new
+              StrictHostKeyChecking yes
               IdentitiesOnly yes
         state: present
       when: not vault_prod_host_exists
@@ -156,11 +162,12 @@
             - {{ staging_domain }}
             - *.{{ production_domain }}
             - {{ production_domain }}
+            - vault-prod
 
           SSH config blocks added for:
             - *.{{ staging_domain }} (User: {{ deploy_user }})
             - *.{{ production_domain }} (User: {{ deploy_user }})
-            - vault-prod (User: {{ deploy_user }}, StrictHostKeyChecking: accept-new)
+            - vault-prod (User: {{ deploy_user }})
 
           Files modified:
             - {{ known_hosts_file }}
