--- a/packages/backups/package.json
+++ b/packages/backups/package.json
@@ -31,8 +31,8 @@
   },
   "dependencies": {
     "@uiw/react-md-editor": "4.0.11",
-    "lucide-react": "0.564.0",
-    "mermaid": "11.12.2"
+    "lucide-react": "0.575.0",
+    "mermaid": "11.12.3"
   },
   "devDependencies": {
     "@tearleads/ui": "workspace:*",
@@ -40,20 +40,20 @@
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.2",
     "@testing-library/user-event": "14.6.1",
-    "@types/node": "25.2.3",
+    "@types/node": "25.3.0",
     "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "5.1.4",
     "@vitest/coverage-v8": "4.0.18",
-    "cross-env": "7.0.3",
+    "cross-env": "10.1.0",
     "jsdom": "28.1.0",
     "react": "19.2.4",
     "react-dom": "19.2.4",
     "react-i18next": "16.5.4",
     "react-router-dom": "7.13.0",
+    "rimraf": "6.1.3",
     "typescript": "5.9.3",
     "vitest": "4.0.18",
-    "vitest-fail-on-console": "0.10.1",
-    "rimraf": "6.1.3"
+    "vitest-fail-on-console": "0.10.1"
   }
 }
