--- a/packages/website/Dockerfile
+++ b/packages/website/Dockerfile
@@ -42,6 +42,10 @@ FROM nginx:alpine
 # Copy built static files
 COPY --from=builder /app/packages/website/dist /usr/share/nginx/html
 
+# Ensure static files are world-readable for nginx worker user.
+RUN find /usr/share/nginx/html -type d -exec chmod 755 {} \; && \
+    find /usr/share/nginx/html -type f -exec chmod 644 {} \;
+
 # Copy nginx config
 RUN echo 'server { \
     listen 80; \
