chore(gitignore): add db-test-utils/sqlite-wasm to ignored paths
The folder contains symlinks to already-gitignored WASM artifacts
in packages/client/src/workers/sqlite-wasm/.

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ npm-debug.log*
 # These are generated artifacts - run the script after git clone or when updating SQLite version
 packages/client/src/workers/sqlite-wasm/
 packages/client/public/sqlite/
+packages/db-test-utils/sqlite-wasm/
 packages/client/public/assets/sqlite3-opfs-async-proxy.js
 packages/client/.generated/
 packages/client/generated/
