--- a/ansible/playbooks/developerWorkstation.yml
+++ b/ansible/playbooks/developerWorkstation.yml
@@ -14,6 +14,10 @@
     ssh_dir: "{{ user_home }}/.ssh"
     known_hosts_file: "{{ ssh_dir }}/known_hosts"
     ssh_config_file: "{{ ssh_dir }}/config"
+    # Tuxedo workspace configuration (developer uses github.com directly, not deploy key alias)
+    tuxedo_base_dir: "{{ user_home }}/tuxedo"
+    tuxedo_repo_ssh_url: "git@github.com:a2f0/tearleads.git"
+    tuxedo_workspace_count: "10"
 
   tasks:
     - name: Validate required environment variables
@@ -152,6 +156,23 @@
         state: present
       when: not vault_prod_host_exists
 
+    # Tuxedo workspace setup (clones tearleads repo into ~/tuxedo/tuxedo1, tuxedo2, etc.)
+    - name: Copy tuxedo repo setup script
+      ansible.builtin.copy:
+        src: "{{ repo_root }}/scripts/setupTuxedoRepos.sh"
+        dest: "{{ user_home }}/setupTuxedoRepos.sh"
+        mode: "0755"
+
+    - name: Run tuxedo repo setup script
+      ansible.builtin.command:
+        cmd: "{{ user_home }}/setupTuxedoRepos.sh"
+      environment:
+        TUXEDO_BASE_DIR: "{{ tuxedo_base_dir }}"
+        TUXEDO_REPO_SSH_URL: "{{ tuxedo_repo_ssh_url }}"
+        TUXEDO_WORKSPACE_COUNT: "{{ tuxedo_workspace_count }}"
+      register: setup_repos_result
+      changed_when: setup_repos_result.stderr | length > 0
+
     - name: Display configuration summary
       ansible.builtin.debug:
         msg: |
@@ -172,3 +193,8 @@
           Files modified:
             - {{ known_hosts_file }}
             - {{ ssh_config_file }}
+
+          Tuxedo workspaces configured:
+            - {{ tuxedo_base_dir }}/tuxedo-main
+            - {{ tuxedo_base_dir }}/tuxedo-shared
+            - {{ tuxedo_base_dir }}/tuxedo1 through tuxedo{{ tuxedo_workspace_count }}
