fix(tuxedo): ensure tmux windows start in correct directories
Pass workspace directories explicitly to inner tmux sessions and
split-window commands via -c flag. Use -d flag on editor splits
to keep terminal pane active. Update dashboard respawn to use
canonical main workspace directory.

--- a/tuxedo/config/tmux.conf
+++ b/tuxedo/config/tmux.conf
@@ -25,8 +25,8 @@ set -g status-right ""
 # Window status styling (Top bar)
 set -g window-status-style "bg=#1a1b26,fg=#565f89"
 set -g window-status-current-style "bg=#1a1b26,fg=#7dcfff,bold"
-set -g window-status-format ' #W-#(cd "#{pane_current_path}"; git rev-parse --abbrev-ref HEAD 2>/dev/null) '
-set -g window-status-current-format ' #W-#(cd "#{pane_current_path}"; git rev-parse --abbrev-ref HEAD 2>/dev/null) '
+set -g window-status-format ' #W:#(cd "#{pane_current_path}"; git rev-parse --abbrev-ref HEAD 2>/dev/null) '
+set -g window-status-current-format ' #W:#(cd "#{pane_current_path}"; git rev-parse --abbrev-ref HEAD 2>/dev/null) '
 set -g window-status-separator "  "
 
 # Pane border styling
