fix(tuxedo): enable OSC 52 clipboard and improve mouse handling
- Add set-clipboard on for OSC 52 clipboard passthrough
- Improve mouse bindings: clicks go to app, drags use copy-mode
- Prepend workspace scripts to PATH in default-command

--- a/tuxedo/config/tmux-inner.conf
+++ b/tuxedo/config/tmux-inner.conf
@@ -6,12 +6,15 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# Terminal settings
-set -g default-command "${SHELL} -l"
+# Terminal settings - prepend workspace scripts to PATH before starting shell
+set -g default-command 'sh -c "[ -n \"$TUXEDO_WORKSPACE\" ] && export PATH=\"$TUXEDO_WORKSPACE/scripts:$TUXEDO_WORKSPACE/scripts/agents:$PATH\"; exec ${SHELL} -l"'
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",tmux-256color:Tc,screen-256color:Tc,xterm-256color:Tc,xterm-ghostty:Tc,ghostty:Tc"
 set-environment -g COLORTERM truecolor
 setw -g mode-keys vi
+
+# Enable OSC 52 clipboard (allows apps like neovim to copy to system clipboard)
+set -s set-clipboard on
 
 # No status bar - outer tmux handles that
 set -g status off
@@ -27,9 +30,10 @@ set -g pane-border-indicators arrows
 set -g window-style "bg=#16161e"
 set -g window-active-style "bg=#1a1b26"
 
-# Mouse support - apps like neovim handle their own mouse, otherwise use copy-mode
+# Mouse support - clicks go to app (neo-tree), drags use tmux copy-mode (auto-copy)
 set -g mouse on
-bind -n MouseDrag1Pane if-shell -F "#{mouse_any_flag}" "send-keys -M" "copy-mode -M"
+bind -n MouseDown1Pane select-pane -t = \; send-keys -M
+bind -n MouseDrag1Pane copy-mode -M
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 
