--- a/tuxedo/config/tmux.conf
+++ b/tuxedo/config/tmux.conf
@@ -4,6 +4,9 @@ set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",tmux-256color:Tc,screen-256color:Tc,xterm-256color:Tc,xterm-ghostty:Tc,ghostty:Tc"
 set-environment -g COLORTERM truecolor
 setw -g mode-keys vi
+
+# Enable OSC 52 clipboard passthrough (allows nested apps to copy to system clipboard)
+set -s set-clipboard on
 set -g allow-rename off
 set -g automatic-rename off
 
