fix(app-builder): generate default app config during postinstall
Add DEFAULT_APP_ID constant and --default flag to app-builder CLI.
Update buildPreDev to download SQLite WASM and generate default app
configs, fixing fresh clone builds that failed on missing generated files.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "postinstall": "pnpm buildPreDev",
-    "buildPreDev": "pnpm build:shared && pnpm build:db",
+    "buildPreDev": "pnpm build:shared && pnpm build:db && pnpm downloadSqliteWasm && pnpm generateDefaultApp",
+    "downloadSqliteWasm": "./scripts/downloadSqliteWasm.sh",
+    "generateDefaultApp": "tsx packages/app-builder/src/cli.ts generate --default",
     "build:shared": "pnpm --filter @tearleads/shared build",
     "build:db": "pnpm --filter @tearleads/db build",
     "build:businesses": "pnpm --filter @tearleads/businesses build",
