feat(tuxedo): add terminal select-to-copy in tmux

--- a/tuxedo/config/tmux-inner.conf
+++ b/tuxedo/config/tmux-inner.conf
@@ -30,11 +30,12 @@ set -g pane-border-indicators arrows
 set -g window-style "bg=#16161e"
 set -g window-active-style "bg=#1a1b26"
 
-# Mouse support - pass all mouse events to apps (neovim handles selection with auto-yank)
+# Mouse support - neovim handles its own selection (auto-yank), terminal uses tmux copy-mode
 set -g mouse on
 bind -n MouseDown1Pane select-pane -t = \; send-keys -M
-bind -n MouseDrag1Pane send-keys -M
-bind -n MouseDragEnd1Pane send-keys -M
+bind -n MouseDrag1Pane if-shell -F "#{mouse_any_flag}" "send-keys -M" "copy-mode -M"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # Pane navigation with Shift+Left/Right
 bind -n S-Left select-pane -t :.-
