fix(ci): build shared before app-builder

--- a/packages/client/Dockerfile
+++ b/packages/client/Dockerfile
@@ -22,6 +22,9 @@ COPY scripts/downloadSqliteWasm.sh scripts/
 # Download SQLite WASM files (gitignored, must be downloaded)
 RUN scripts/downloadSqliteWasm.sh
 
+# Build shared package so app-builder can import @tearleads/shared dist output in clean CI checkouts.
+RUN pnpm --filter @tearleads/shared build
+
 # Generate app config/theme assets required by client CSS imports.
 ARG APP_NAME=tearleads
 RUN cd packages/app-builder && pnpm exec tsx src/cli.ts generate --app "${APP_NAME}"
