--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -51,6 +51,7 @@
     "@dnd-kit/core": "6.3.1",
     "@huggingface/transformers": "3.8.1",
     "@ionic/core": "8.7.17",
+    "@noble/hashes": "2.0.1",
     "@radix-ui/react-slot": "1.2.4",
     "@tanstack/react-table": "8.21.3",
     "@tanstack/react-virtual": "3.13.18",
