--- a/packages/app-builder/package.json
+++ b/packages/app-builder/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@tearleads/shared": "workspace:*",
     "commander": "14.0.3",
+    "jiti": "2.6.1",
     "zod": "4.3.6"
   },
   "devDependencies": {
