chore(tuxedo): fix Linux interoperability across configs and playbook
- tmux: replace macOS-only pbcopy with OSC 52 copy-selection-and-cancel
- ghostty: switch font from Menlo to JetBrains Mono, add Linux Super key bindings
- ansible: add fd-find, xclip, JetBrains Mono font, uv, and Neovim 0.10+ version check
- bootstrap: update next-steps to reference tuxedo.yml and list installed tools
- neovim/coverage: update help text with cross-platform install instructions

--- a/tuxedo/config/ghostty.conf
+++ b/tuxedo/config/ghostty.conf
@@ -1,6 +1,6 @@
 # Tuxedo Ghostty configuration
 theme = "TokyoNight Night"
-font-family = 'Menlo'
+font-family = 'JetBrains Mono'
 font-size = 15
 
 # Override palette colors for better visibility
@@ -26,14 +26,19 @@ minimum-contrast = 2
 # Make bold text use bright palette colors
 bold-is-bright = true
 
-# Make Option key send Meta for tmux keybindings
+# macOS: Make Option key send Meta for tmux keybindings (no-op on Linux)
 macos-option-as-alt = true
 
-# Cmd+Left/Right sends escape sequences for tmux window navigation
+# macOS: Cmd+Left/Right sends escape sequences for tmux window navigation (no-op on Linux)
 keybind = cmd+left=text:\x1b[1;3D
 keybind = cmd+right=text:\x1b[1;3C
 
+# Linux: Super+Left/Right for tmux window navigation (no-op on macOS)
+keybind = super+left=text:\x1b[1;3D
+keybind = super+right=text:\x1b[1;3C
+
 resize-strategy = screen
 window-padding-x = 0\nwindow-padding-y = 0
+# macOS-only settings (no-op on Linux)
 macos-icon-animation = false
 macos-titlebar-proxy-icon = hidden
