--- a/tuxedo/config/tmux-inner.conf
+++ b/tuxedo/config/tmux-inner.conf
@@ -34,8 +34,8 @@ set -g window-active-style "bg=#1a1b26"
 set -g mouse on
 bind -n MouseDown1Pane select-pane -t = \; send-keys -M
 bind -n MouseDrag1Pane if-shell -F "#{mouse_any_flag}" "send-keys -M" "copy-mode -M"
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # Pane navigation with Shift+Left/Right
 bind -n S-Left select-pane -t :.-
