fix(ansible): add pipefail to JetBrains Mono font check
ansible-lint risky-shell-pipe requires set -o pipefail on piped
shell commands. Use bash with pipefail like the nvim version check.

--- a/ansible/playbooks/tuxedo.yml
+++ b/ansible/playbooks/tuxedo.yml
@@ -290,7 +290,8 @@
     # JetBrains Mono font (used by ghostty.conf)
     - name: Check if JetBrains Mono is installed
       ansible.builtin.shell:
-        cmd: fc-list | grep -qi "JetBrains Mono"
+        cmd: set -o pipefail && fc-list | grep -qi "JetBrains Mono"
+        executable: /bin/bash
       register: jetbrains_mono_check
       changed_when: false
       failed_when: false
