fix(client): restore @electron/rebuild devDep needed by build script
The prepareElectronSqliteBinary.sh script checks for this package.
Knip flagged it as unused but it is required at build time.

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -105,6 +105,7 @@
     "@capacitor/ios": "8.1.0",
     "@electron-toolkit/preload": "3.0.2",
     "@electron-toolkit/utils": "4.0.0",
+    "@electron/rebuild": "4.0.3",
     "@playwright/test": "1.58.2",
     "@tailwindcss/vite": "4.2.0",
     "@tearleads/db-test-utils": "workspace:*",
