feat(vfs): harden secure upload rollout
- wire share revoke to rekey item epochs in client integration path
- add bounded-memory local encrypted blob persistence for web and capacitor
- add secure upload readiness runner and rollout doc QA gate

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "build": "pnpm -r build",
     "enforceTypeScriptIncrementalBuilds": "./scripts/preen/enforceTypeScriptIncrementalBuilds.ts",
     "test": "pnpm -r test && pnpm test:tuxedo",
+    "qaVfsSecureUpload": "tsx scripts/qa/vfsSecureUploadReadiness.ts",
     "test:tuxedo": "sh ./tuxedo/tests/run.sh",
     "test:coverage": "sh ./tuxedo/tests/coverage.sh",
     "clean": "pnpm -r clean",
