fix(ansible): pin claude installer checksum

--- a/ansible/playbooks/developerLaptop.yml
+++ b/ansible/playbooks/developerLaptop.yml
@@ -10,6 +10,7 @@
     ghostty_release_tag: "1.2.3-0-ppa1"
     ghostty_package_version: "1.2.3-0.ppa1"
     ghostty_ubuntu_codename: "24.04"
+    claude_install_sha256: "a27f0c75029d86eab7313ce4d5a2464e4e68dcce76905a1462a76ab4f19937de"
 
   tasks:
     - name: Install shared developer toolchain
