--- a/ansible/playbooks/tuxedo.yml
+++ b/ansible/playbooks/tuxedo.yml
@@ -9,6 +9,7 @@
     ghostty_release_tag: "1.2.3-0-ppa1"
     ghostty_package_version: "1.2.3-0.ppa1"
     ghostty_ubuntu_codename: "24.04"
+    claude_install_sha256: "a27f0c75029d86eab7313ce4d5a2464e4e68dcce76905a1462a76ab4f19937de"
     linux_security_baseline_manage_ufw: true
     linux_security_baseline_ufw_allow_rules:
       - { port: "22", proto: "tcp" }
