--- a/ansible/playbooks/tasks/devToolchain.yml
+++ b/ansible/playbooks/tasks/devToolchain.yml
@@ -77,21 +77,48 @@
   when: jetbrains_mono_check.rc != 0
   changed_when: true
 
-# Neovim PPA for version 0.10+ (required for vim.uv API used in neovim.lua)
-- name: Add Neovim PPA
-  ansible.builtin.apt_repository:
-    repo: ppa:neovim-ppa/unstable
-    state: present
-    update_cache: true
+# Neovim 0.10+ from GitHub releases (PPA doesn't support all Ubuntu codenames)
+- name: Set Neovim version
+  ansible.builtin.set_fact:
+    neovim_version: "0.10.4"
 
-- name: Install Neovim from PPA
-  ansible.builtin.apt:
-    name: neovim
-    state: present
+- name: Check installed Neovim version
+  ansible.builtin.command:
+    cmd: /usr/local/bin/nvim --version
+  register: nvim_installed_check
+  changed_when: false
+  failed_when: false
+
+- name: Download Neovim release tarball
+  ansible.builtin.get_url:
+    url: "https://github.com/neovim/neovim/releases/download/v{{ neovim_version }}/nvim-linux-x86_64.tar.gz"
+    dest: "/tmp/nvim-linux-x86_64.tar.gz"
+    mode: "0644"
+  when: nvim_installed_check.rc != 0 or ('v' + neovim_version) not in nvim_installed_check.stdout
+
+- name: Remove old Neovim installation
+  ansible.builtin.file:
+    path: /usr/local/nvim-linux-x86_64
+    state: absent
+  when: nvim_installed_check.rc != 0 or ('v' + neovim_version) not in nvim_installed_check.stdout
+
+- name: Extract Neovim tarball
+  ansible.builtin.unarchive:
+    src: /tmp/nvim-linux-x86_64.tar.gz
+    dest: /usr/local
+    remote_src: true
+  when: nvim_installed_check.rc != 0 or ('v' + neovim_version) not in nvim_installed_check.stdout
+
+- name: Symlink nvim binary
+  ansible.builtin.file:
+    src: /usr/local/nvim-linux-x86_64/bin/nvim
+    dest: /usr/local/bin/nvim
+    state: link
+  when: nvim_installed_check.rc != 0 or ('v' + neovim_version) not in nvim_installed_check.stdout
 
 - name: Verify Neovim version is 0.10+
   ansible.builtin.shell:
-    cmd: set -o pipefail && nvim --version | head -1 | grep -oP '\d+\.\d+' | head -1
+    cmd: set -o pipefail && /usr/local/bin/nvim --version | head -1 | grep -oP '\d+\.\d+' | head -1
     executable: /bin/bash
   register: nvim_version
   changed_when: false
