--- a/tuxedo/config/tmux.conf
+++ b/tuxedo/config/tmux.conf
@@ -55,6 +55,8 @@ bind -n MouseDown1Pane select-pane -t = \; send-keys -M
 bind -n MouseDown3Pane display-menu -T "#[align=centre]Pane Splits" -t = -x M -y M \
     "Horizontal Split" h { send-keys C-a - } \
     "Vertical Split" v { send-keys C-a \\ } \
+    "Even Horizontal" e { send-keys C-a M-1 } \
+    "Even Vertical" E { send-keys C-a M-2 } \
     "Close Pane" x { send-keys C-a x } \
     "" \
     "Copy Word" c { copy-mode -q ; set-buffer "#{q:mouse_word}" } \
