fix(tuxedo): avoid shell startup edits

--- a/tuxedo/config/tmux.conf
+++ b/tuxedo/config/tmux.conf
@@ -1,8 +1,9 @@
 # Tuxedo tmux configuration
-set -g default-command "${SHELL} -l"
+set -g default-command "sh -lc 'if [ -t 0 ]; then export GPG_TTY=$(tty); fi; exec ${SHELL} -l'"
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",tmux-256color:Tc,screen-256color:Tc,xterm-256color:Tc,xterm-ghostty:Tc,ghostty:Tc"
 set-environment -g COLORTERM truecolor
+set-environment -g COLORFGBG "15;0"
 setw -g mode-keys vi
 
 # Enable OSC 52 clipboard passthrough (allows nested apps to copy to system clipboard)
