--- a/ansible/playbooks/tasks/laptopCliEnvironment.yml
+++ b/ansible/playbooks/tasks/laptopCliEnvironment.yml
@@ -1,45 +1,5 @@
 ---
-# Laptop CLI shell environment (no GPG unlockagent alias)
-
-- name: Add CLI aliases to bashrc
-  ansible.builtin.blockinfile:
-    path: "/home/{{ ansible_user }}/.bashrc"
-    create: true
-    mode: "0644"
-    owner: "{{ ansible_user }}"
-    group: "{{ ansible_user }}"
-    marker: "# {mark} ANSIBLE MANAGED - CLI aliases"
-    block: |
-      alias frc='claude --dangerously-skip-permissions'
-      alias frco='codex --sandbox danger-full-access --ask-for-approval never'
-
-- name: Add tuxedo environment to bashrc
-  ansible.builtin.blockinfile:
-    path: "/home/{{ ansible_user }}/.bashrc"
-    create: true
-    mode: "0644"
-    owner: "{{ ansible_user }}"
-    group: "{{ ansible_user }}"
-    marker: "# {mark} ANSIBLE MANAGED - tuxedo environment"
-    block: |
-      export TUXEDO_BASE_DIR="$HOME/tuxedo"
-
-      # Terminal color settings for Claude Code (truecolor + dark terminal signal)
-      export COLORTERM=truecolor
-      export COLORFGBG="15;0"
-
-      # GPG signing requires TTY for passphrase prompts
-      if [[ -t 0 ]]; then
-        export GPG_TTY=$(tty)
-      fi
-
-      if [ -n "$TUXEDO_WORKSPACE" ]; then
-        export PATH="$TUXEDO_WORKSPACE/scripts:$TUXEDO_WORKSPACE/scripts/agents:$PATH"
-        # Only cd into workspace for screen sessions, to avoid changing dir in every new terminal
-        if [ -n "$STY" ]; then
-          [ -d "$TUXEDO_WORKSPACE" ] && cd "$TUXEDO_WORKSPACE"
-        fi
-      fi
+# Laptop CLI shell environment (no shell startup modifications)
 
 - name: Ensure Claude Code config directory exists
   ansible.builtin.file:
