--- a/tuxedo/config/tmux.conf
+++ b/tuxedo/config/tmux.conf
@@ -1,5 +1,5 @@
 # Tuxedo tmux configuration
-set -g default-command "sh -lc 'if [ -t 0 ]; then export GPG_TTY=$(tty); fi; exec ${SHELL} -l'"
+set -g default-command "sh -c 'if [ -t 0 ]; then export GPG_TTY=$(tty); fi; exec ${SHELL} -l'"
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",tmux-256color:Tc,screen-256color:Tc,xterm-256color:Tc,xterm-ghostty:Tc,ghostty:Tc"
 set-environment -g COLORTERM truecolor
