fix(k8s): harden staging s3 smoke checks
Add a staging S3 smoke script with placeholder-secret detection,
non-blocking setup-job handling, and local AWS CLI fallback when
the in-cluster smoke pod image cannot be pulled.

Also ensure raw deploy path applies garage manifests and align Garage
config schema keys with Garage v2.2.0 expectations.

--- a/terraform/stacks/staging/k8s/manifests/garage.yaml
+++ b/terraform/stacks/staging/k8s/manifests/garage.yaml
@@ -11,10 +11,9 @@ data:
 
     replication_factor = 1
 
-    [rpc]
-    bind_addr = "[::]:3901"
+    rpc_bind_addr = "[::]:3901"
     rpc_public_addr = "garage:3901"
-    secret = "${GARAGE_RPC_SECRET}"
+    rpc_secret = "${GARAGE_RPC_SECRET}"
 
     [s3_api]
     s3_region = "us-east-1"
@@ -27,6 +26,7 @@ data:
 
     [admin]
     api_bind_addr = "[::]:3903"
+    admin_token = "${GARAGE_ADMIN_TOKEN}"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
