refactor(knip): migrate config to knip.ts

--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "lint:ansible": "ansible-lint ansible/ terraform/stacks/staging/tee/ansible/ terraform/stacks/prod/tee/ansible/",
     "lint:md": "markdownlint-cli2 '**/*.md'",
     "lint:actions": "./scripts/checkGithubActions.sh",
-    "lint:knip": "knip --config knip.json --use-tsconfig-files",
-    "lint:knip:fix": "knip -n --config knip.json --use-tsconfig-files --fix --fix-type dependencies --format",
+    "lint:knip": "knip --config knip.ts --use-tsconfig-files",
+    "lint:knip:fix": "knip -n --config knip.ts --use-tsconfig-files --fix --fix-type dependencies --format",
     "lintPreen": "./scripts/checkPreenEcosystem.sh --strict",
     "checkMswParity": "./scripts/preen/checkMswParity.ts",
     "format": "biome format --write .",
