fix(tuxedo): use short tmux hostname token

--- a/tuxedo/config/tmux.conf
+++ b/tuxedo/config/tmux.conf
@@ -22,7 +22,7 @@ set -g pane-border-format '#[fg=#bb9af7]#(basename "#{pane_current_path}")#[fg=#
 
 # Tokyo Night color palette
 set -g status-style "bg=#1a1b26,fg=#c0caf5"
-set -g status-left "#[fg=#7aa2f7,bold][#H] "
+set -g status-left "#[fg=#7aa2f7,bold][#h] "
 set -g status-left-length 30
 set -g status-right ""
 
